<resources>
    <string name="app_name">Vikash</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_subtitle_vikash">vikash@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="attendance">Attendance</string>
    <string name="admin">Admin</string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="classcolumn">Class</string>
    <string name="subject">Subject</string>
    <string name="section">Section</string>
    <string name="manage_marks">ManageMarks</string>
    <string name="exam">Exam</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="homework">Home Work</string>
    <string name="noticeboard">Notice Board</string>
    <string name="slno">#</string>
    <string name="id">ID</string>
    <string name="stuname">Student Name</string>
    <string name="marks">Marks</string>
    <string-array name="from">
        <item>From</item>
    </string-array>
    <string-array name="To">
        <item>To</item>
    </string-array>


</resources>
