<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/dashboard_menu">

    <fragment
        android:id="@+id/dashboard_menu"
        android:name="com.example.vedanam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/attendance_menu"
        android:name="com.example.vedanam.Fragment.AttendanceFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/subject_menu"
        android:name="com.example.vedanam.Fragment.SubjectFragment"
        android:label="@string/subject"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/manage_marks_menu"
        android:name="com.example.vedanam.Fragment.ManageMarksFragment"
        android:label="@string/manage_marks"
        tools:layout="@layout/fragment_manage_marks" />

    <fragment
        android:id="@+id/exam_schedule_menu"
        android:name="com.example.vedanam.Fragment.ExamScheduleFragment"
        android:label="@string/exam_schedule"
        tools:layout="@layout/fragment_examschedule" />

    <fragment
        android:id="@+id/homework_menu"
        android:name="com.example.vedanam.Fragment.HomeWorkFragment"
        android:label="@string/homework"
        tools:layout="@layout/fragment_homework" />

    <fragment
        android:id="@+id/noticeboard_menu"
        android:name="com.example.vedanam.Fragment.NoticeBoardFragment"
        android:label="@string/noticeboard"
        tools:layout="@layout/fragment_noticeboard" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.vedanam.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>