<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp"
        android:background="@drawable/background_outline"
        >

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.02"
        android:background="@color/heading"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.98"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mm_slno"
            android:text="@string/slno"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mm_id"
            android:text="@string/id"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mm_name"
            android:text="@string/stuname"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mm_marks"
            android:text="@string/marks"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>