<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp"
        android:background="@drawable/background_outline">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.02"
        android:background="@color/heading"/>
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp"

    android:layout_weight="0.98">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sub_class"
        android:layout_weight="1"
        android:text="@string/classcolumn"
        android:padding="5dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sub_sub"
        android:layout_weight="1"
        android:text="@string/subject"
        android:padding="5dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sub_teacher"
        android:layout_weight="1"
        android:text="@string/teacher"
        android:padding="5dp"
        android:textColor="@color/black"/>

</LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>