<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogInActivity"
    android:background="@color/white"
    android:id="@+id/login_relative"
    >


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_school_24px"
        android:id="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vikash_login_text"
        android:text="@string/app_name"
        android:layout_below="@id/login_logo"
        android:textSize="45sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vikash_login_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:boxBackgroundColor="@color/fill_box"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_below="@+id/email_text_input"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@color/fill_box"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:hint="@string/password"
            android:textSize="15sp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Login"
        android:layout_centerInParent="true"
        android:layout_below="@+id/password_text_input"
        android:id="@+id/login_button"
        />





</RelativeLayout>
</layout>